# Notepad_cpp_py

./: .gitignore  README.md
Notepad_cpp/: CMakeLists.txt
Notepad_cpp/lib/ts/: Notepad_cpp_pt_BR.ts
Notepad_cpp/src/: main.cpp
Notepad_cpp/src/mainwindow/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
Notepad_py/: Makefile  Notepad.py  __main__.py
